feat: add burn coins actions
