# protocol/api/mychain/coinactions/tx_grpc.pb.go
@@ -19,7 +19,8 @@ import (
 const _ = grpc.SupportPackageIsVersion7
 
 const (
-	Msg_UpdateParams_FullMethodName = "/mychain.coinactions.Msg/UpdateParams"
+	Msg_UpdateParams_FullMethodName    = "/mychain.coinactions.Msg/UpdateParams"
+	Msg_BurnCoinsAction_FullMethodName = "/mychain.coinactions.Msg/BurnCoinsAction"
 )
 
 // MsgClient is the client API for Msg service.
@@ -29,6 +30,7 @@ type MsgClient interface {
 	// UpdateParams defines a (governance) operation for updating the module
 	// parameters. The authority defaults to the x/gov module account.
 	UpdateParams(ctx context.Context, in *MsgUpdateParams, opts ...grpc.CallOption) (*MsgUpdateParamsResponse, error)
+	BurnCoinsAction(ctx context.Context, in *MsgBurnCoinsAction, opts ...grpc.CallOption) (*MsgBurnCoinsActionResponse, error)
 }
 
 type msgClient struct {
@@ -48,6 +50,15 @@ func (c *msgClient) UpdateParams(ctx context.Context, in *MsgUpdateParams, opts 
 	return out, nil
 }
 
+func (c *msgClient) BurnCoinsAction(ctx context.Context, in *MsgBurnCoinsAction, opts ...grpc.CallOption) (*MsgBurnCoinsActionResponse, error) {
+	out := new(MsgBurnCoinsActionResponse)
+	err := c.cc.Invoke(ctx, Msg_BurnCoinsAction_FullMethodName, in, out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
 // MsgServer is the server API for Msg service.
 // All implementations must embed UnimplementedMsgServer
 // for forward compatibility
@@ -55,6 +66,7 @@ type MsgServer interface {
 	// UpdateParams defines a (governance) operation for updating the module
 	// parameters. The authority defaults to the x/gov module account.
 	UpdateParams(context.Context, *MsgUpdateParams) (*MsgUpdateParamsResponse, error)
+	BurnCoinsAction(context.Context, *MsgBurnCoinsAction) (*MsgBurnCoinsActionResponse, error)
 	mustEmbedUnimplementedMsgServer()
 }
 
@@ -64,6 +76,9 @@ type UnimplementedMsgServer struct {
 
 func (UnimplementedMsgServer) UpdateParams(context.Context, *MsgUpdateParams) (*MsgUpdateParamsResponse, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method UpdateParams not implemented")
+}
+func (UnimplementedMsgServer) BurnCoinsAction(context.Context, *MsgBurnCoinsAction) (*MsgBurnCoinsActionResponse, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method BurnCoinsAction not implemented")
 }
 func (UnimplementedMsgServer) mustEmbedUnimplementedMsgServer() {}
 
@@ -96,6 +111,24 @@ func _Msg_UpdateParams_Handler(srv interface{}, ctx context.Context, dec func(in
 	return interceptor(ctx, in, info, handler)
 }
 
+func _Msg_BurnCoinsAction_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(MsgBurnCoinsAction)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(MsgServer).BurnCoinsAction(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: Msg_BurnCoinsAction_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(MsgServer).BurnCoinsAction(ctx, req.(*MsgBurnCoinsAction))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
 // Msg_ServiceDesc is the grpc.ServiceDesc for Msg service.
 // It's only intended for direct use with grpc.RegisterService,
 // and not to be introspected or modified (even as a copy)
@@ -106,6 +139,10 @@ var Msg_ServiceDesc = grpc.ServiceDesc{
 		{
 			MethodName: "UpdateParams",
 			Handler:    _Msg_UpdateParams_Handler,
+		},
+		{
+			MethodName: "BurnCoinsAction",
+			Handler:    _Msg_BurnCoinsAction_Handler,
 		},
 	},
 	Streams:  []grpc.StreamDesc{},
